--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
       - run:
           name: Run build commands
           command: |
-            npx mocha --list-files | circleci tests run --command="xargs npx mocha" --split-by=timings
+            echo "oy"
